<resources>
    <string name="app_name">BookWorm</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.
    </string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_dash_board">DashBoard</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur eu convallis diam. Mauris sodales erat molestie molestie dignissim. Maecenas vitae laoreet odio, eu suscipit felis. Phasellus condimentum, ligula ut sagittis venenatis, mi sem pretium est, eleifend imperdiet sem sem eget mauris. Duis placerat fringilla consequat. Etiam semper leo vitae nulla volutpat volutpat. Suspendisse ante nibh, scelerisque ut aliquet nec, semper id justo. Pellentesque quis lacinia ex. Fusce auctor augue non neque sodales tempor.</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short (6 characters)</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="signupLabel">SignUp</string>
    <string name="namePlaceHolder">Name</string>
    <string name="emailPlaceHolder">Email</string>
    <string name="passwordPlaceHolder">Password</string>
    <string name="confirmPasswordPlaceHolder">Confirm Password</string>
    <string name="nicknamePlaceHolder">Nickname</string>
    <string name="agePlaceHolder">Age</string>
    <string name="name_error">Name cannot be blank!</string>
    <string name="blank_email_error">Email cannot be blank!</string>
    <string name="invalid_email_error">Invalid Email!</string>
    <string name="blank_nickname_error">Nickname cannot be blank!</string>
    <string name="blank_password_error">Password must be at least 6 characters!</string>
    <string name="blank_confirmpassword_error">Please re-enter password</string>
    <string name="password_dont_match_error">Passwords dont match!</string>
    <string name="password_invalid_error">Password must be at least 6 characters</string>
    <string name="email_in_use_error">That email already exists!</string>
    <string name="nickname_in_use_error">That nickname is already in use!</string>
    <string name="register_fail">Couldnt Register!</string>
    <string name="register_success">User registered successfully!</string>
    <string name="content_desc_logo">Instagram Logo</string>
    <string name="post_button">Post</string>
    <string name="upload_image_prompt">Upload Image</string>
    <string name="caption_text">Say something about this post</string>
    <string name="hashtag_prompt">Pick a cool hashtag</string>
    <string name="title_activity_create_post">Add New Post</string>
    <string name="file_name_prompt">FileName</string>
    <string name="select_image">Select Image</string>
    <string name="searchByHashtag">Hashtags</string>
    <string name="searchByHashtagTitle">Find Posts by Hashtags!</string>
    <string name="searchUsers">Users</string>
    <string name="searchUsersTitle">Find Users by Username!</string>
    <string name="createNewPost">Add Post</string>
    <string name="createNewPostTitle">Create New Post!</string>

    <!-- TODO: Remove or change this placeholder text -->


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="request">request</string>

    <string name="personal_dashboard_request">11</string>
    <string name="custom_hashtag_dashboard_request">22</string>
    <string name="custom_user_dashboard_request">33</string>


    <string name="userNicknameFragmentArg">nickname</string>
    <string name="hashTagFragmentArg">hashtag</string>


    <string name="logout">Log out</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="username_placeHolder">userName_here</string>
    <string name="numposts_placeHolder">numPosts_here</string>
    <string name="buyerSelected">Buyer</string>
    <string name="sellerSelected">Seller</string>


    <string name="sellerNamePlaceHolder">Seller Name here</string>
    <string name="update_inventory">Update Inventory from File</string>
    <string name="view_orders">View Orders</string>
    <string name="view_customers">View Customers</string>
    <string name="update_info">Update user information</string>
    <string name="title_activity_dash">DashActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="product_catalog">Catalog</string>
    <string name="view_inventory">View Inventory</string>
    <string name="shoppingCart">Shopping Cart</string>
    <string name="orders">View Orders</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="searchProduct">Search Product</string>
    <string name="filterProduct">Filter Product</string>
    <string name="empty_inventory">No Products Found!</string>
    <string name="filter_price">By Price</string>
    <string name="filter_author">By Author</string>


    <string name="buyer_get_all_products_request">222</string>
    <string name="buyer_get_product_by_id_request">333</string>
    <string name="buyer_get_product_by_price_request">444</string>
    <string name="buyer_get_product_by_author_request">555</string>

    <string name="user_needs_orders_request">1345</string>

    <string name="seller_get_all_products_request">777</string>
    <string name="seller_get_product_by_id_request">666</string>
    <string name="seller_see_customers_request">931</string>
    <string name="see_settings">1125</string>

    <string name="shipping_title_textview">Shipping Details</string>
    <string name="fullName_textview">Full Name</string>
    <string name="address01_textview">Address</string>
    <string name="address02_textview">Apt,Suit Number (Optional)</string>
    <string name="city_textview">City</string>
    <string name="state_textView">State and Zip</string>
    <string name="zip_textView">Zip</string>
    <string name="email_textview">Email</string>
    <string name="phone_textview">Phone</string>

    <string name="payment_title_textview">Payment Information</string>
    <string name="payment_Details">Payment Method</string>
    <string name="Billing_Address_details">Billing Adress</string>
    <string name="NameonCard_Textview">Name On Card</string>
    <string name="CardNumber_TextView">Card Details</string>
    <string name="Expiration_TextView">Expiration Date</string>

    <string name="outofstock_textview">Out of stock</string>
    <string name="instock_textview">In stock</string>
    <string name="OrderSummery_Textview">Order Summary</string>
    <string name="itemsCount_Summury_Textview">Items</string>
    <string name="shippingCharges_TextView">Shipping Costs</string>
    <string name="totalTax_TextView">Estimated tax</string>
    <string name="OrderTotal_Textview">Order Total</string>
    <string name="place_order_button">Place Your Order</string>
    <string name="same_address">Same as shipping address</string>
    <string name="thankyou_message">\nThank you for shopping with Us!,</string>
    <string name="shippingAdrress">It will be deliver at:\n</string>
    <string name="nameerror">Please enter valid name.</string>
    <string name="addresserror">Please enter Address</string>
    <string name="cityerror">Please enter city.</string>
    <string name="stateerror">Please enter State.</string>
    <string name="ziperror">Please enter valid zip code with length of 5.</string>
    <string name="emailerror">Please enter valid email address.</string>
    <string name="phoneerror">Please enter valid Phone Number ONLY 10 DIGITS.</string>
    <string name="carderror">Please enter valid card</string>
    <string name="proceed_to_checkout">Proceed to checkout</string>
    <string name="number_of_items">number of items</string>
    <string name="no_items_in_cart">No Items in Cart!</string>
    <string name="the_bill">the bill</string>


    <string name="price_here">price here</string>
    <string name="productname_here">productName here</string>
    <string name="seller_here">seller here</string>
    <string name="productstock_here">productStock here</string>
    <string name="productid_hidden">productId hidden</string>
    <string name="remove_from_cart">Remove From Cart</string>


    <string name="load_inventory_button">Load Inventory</string>

    <string name="buyer_proceed_to_order">279</string>
    <string name="buyer_proceed_to_cart">1221</string>
    <string name="delete_label">Delete</string>
    <string name="modify_item">Modify Item</string>
    <string name="delete">Delete</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="addCartLabel">Add To Cart!</string>
    <string name="removeCartLabel">Remove from Cart!</string>
    <string name="empty_orders">No Orders To Show!</string>
    <string name="empty_customer_list">No Customers to Show!</string>


</resources>