<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/showInventory"
            android:icon="@mipmap/dashboard"
            android:title="@string/view_inventory" />

        <item
            android:id="@+id/viewCustomers"
            android:icon="@mipmap/baseline_account_circle_black_24dp"
            android:title="@string/view_customers" />

        <item
            android:id="@+id/orders"
            android:icon="@mipmap/orders"
            android:title="@string/orders" />

        <item
            android:id="@+id/seller_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools" />

        <item
            android:id="@+id/logoutButton"
            android:icon="@mipmap/baseline_exit_to_app_black_24dp"
            android:title="@string/logout" />

    </group>


</menu>
